--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,23 +3,37 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
+        <h2>Welcome Competitors!</h2>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+            <label for="example-text">First Name</label>
+            <input type="text" id="first-name" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+          </div>
+           <div class="form-group">
+            <label for="example-text">Last Name</label>
+            <input type="text" id="last-name" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+          </div>
+           <div class="form-group">
+            <label for="example-text">Belt Color</label>
+            <input type="text" id="belt-color" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+          </div>
+           <div class="form-group">
+            <label for="example-text">Weight</label>
+            <input type="text" id="weight" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+          </div>
+           <div class="form-group">
+            <label for="example-text">Zipcode</label>
+            <input type="text" id="zipcode" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
           </div>
           <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
+        <h3>Competitors:</h3>
+        <ul id="competitor-list" class="list-group">
+          {{#each Competitors}}
           <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
+            <a href="competitors/{{this.id}}">{{this.text}}</a>
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
           {{/each}}
