--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,8 @@
 <div id="home">
   <div class="container">
+    <div id="logo">
+      <img src="../public/assets/BB_Black_.png" alt="Bracket Builder Logo">
+    </div>
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
@@ -46,7 +49,8 @@
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
         <div id="map">
-          <h4>MAP SPACE</h4>
+          <h4>Map Space</h4>
+          <img src="../public/assets/demomap.jpeg" alt="placeholder map">
         </div>
         <div id="competitor_row">
           <h3>Competitors:</h3>
