dropdown buttons in progress

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,28 +2,57 @@
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
+        {{!-- <h1>{{msg}}</h1> --}}
+        <h1>Bracket Builder</h1>
         <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
+          {{!-- <div class="form-group">
             <label for="example-text">Example Text</label>
             <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <div class="form-group">
+          </div> --}}
+
+          {{!-- <div class="form-group">
             <label for="example-description">Example Description</label>
             <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
+          </div> --}}
+          {{!-- <button id="Belt" class="btn btn-primary float-right">Belt</button>
+          <button id="Weight" class="btn btn-secondary float-left">Weight</button> --}}
+
+          <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle float-right" type="button" data-toggle="dropdown">Belt
+              <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+              <li><a href="#">White</a></li>
+              <li><a href="#">Blue</a></li>
+              <li><a href="#">Purple</a></li>
+              <li><a href="#">Brown</a></li>
+              <li><a href="#">Black</a></li>
+            </ul>
           </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle float-left" type="button" data-toggle="dropdown">Weight
+              <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+              <li><a href="#">Light Feather - 53.5kg(118 lbs)</a></li>
+              <li><a href="#">Feather - 58.5kg(129lbs)</a></li>
+              <li><a href="#">Light - 64kg(141lbs)</a></li>
+              <li><a href="#">Middle - 69kg(152lbs)</a></li>
+              <li><a href="#">Feather - 58.5kg(129lbs)</a></li>
+              <li><a href="#">Medium Heavy - 74kg(163lbs)</a></li>
+              <li><a href="#">Heavy - No Maximum Weight</a></li>
+            </ul>
+          </div>
+
+          {{!--
         </form>
         <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
+        <ul id="example-list" class="list-group">S
+          {{#each examples}}S
           <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
+            <a href="example/{{this.id}}">{{this.text}}</a>S
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
           {{/each}}
-        </ul>
+        </ul> --}}
       </div>
     </div>
   </div>
