--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+  {{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"> --}}
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
   <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Compiled and minified CSS -->
@@ -15,6 +15,28 @@
 </head>
 
 <body>
+   <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle float-right" type="button" data-toggle="dropdown">Belt
+              <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+              <li><a href="#">White</a></li>
+              <li><a href="#">Blue</a></li>
+              <li><a href="#">Purple</a></li>
+              <li><a href="#">Brown</a></li>
+              <li><a href="#">Black</a></li>
+            </ul>
+          </div>
+          <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+</div>
+
   {{{body}}}
 </body>
 
