--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,42 @@
 .list-group-item {
   line-height: 2.5;
 }
+#header{
+  display:inline-flex;
+  /* margin: 5% auto; */
+  text-align: center;
+  
+}
+img {
+  width: 100px;
+  height: 100px;
+
+}
+#header p{
+  font-family: 'Rock Salt', cursive;
+  font-size: 5em;
+  
+
+}
+#map {
+  border: 1px solid black; 
+  background-color: gold;
+  width: 80%;
+  height: 250px;
+  margin: 5% auto;
+ 
+
+}
+
+#list {
+  border: 1px solid black; 
+  background-color: orange;
+  width: 80%;
+  height: 250px;
+  margin: 5% auto;
+ 
+
+}
+.dropdown {
+  margin: 0 20px;
+}
