--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div id="home">
   <div class="container">
     <div id="logo">
-      <img src="assets/BB_Black_.png" alt="Bracket Builder Logo">
+      <img src="assets/BB_Black_.png" alt="Bracket Builder Logo" id="mainLogo">
     </div>
     <div class="row">
       <div class="col-8 offset-2">
