Header with embedded logo

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,13 @@
 <div id="home">
   <div class="container">
-    <div id="logo">
-      <img src="assets/BB_Black_.png" alt="Bracket Builder Logo" id="mainLogo">
-    </div>
+    <div id="header">
+          <p class="headerText">Bracket</p>
+          <div id="logo">
+            <img src="assets/BB_Black_.png" alt="Bracket Builder Logo" id="mainLogo">
+          </div>
+          <p class="headerText">Builder</p>
+        </div>    
+    
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
