--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/googleMaps.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZYOxZZL8kgIlC4RLfG8Gkfr8xHnZmFTc&libraries=places&callback=initMap" async defer></script>
+ <link href="https://fonts.googleapis.com/css?family=Michroma" rel="stylesheet"> 
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
