--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,6 +2,20 @@
   line-height: 2.5;
 }
 
+#header{
+  display:inline-flex;
+  /* margin: 5% auto; */
+  text-align: center;
+
+}
+#header p{
+  font-family: 'Michroma', sans-serif;
+  font-size: 5em;
+}
+form, input, label, p {
+  color: black !important;
+}
+
 /* #competitor_row {
   float: left;
   width: 50%;
@@ -14,5 +28,5 @@
 
 #mainLogo {
   height: 15%;
-  width: 15%
+  width: 20%
 }
