--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,12 @@
 <div id="home">
   <div class="container">
-    <div id="logo">
-      <img src="assets/BB_Black_.png" alt="Bracket Builder Logo" id="mainLogo">
-    </div>
+    <div id="header">
+          <p class="headerText">Bracket</p>
+          <div id="logo">
+            <img src="assets/BB_Black_.png" alt="Bracket Builder Logo" id="mainLogo">
+          </div>
+          <p class="headerText">Builder</p>
+        </div>    
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
@@ -56,6 +60,7 @@
             <button id="zipSubmit" class="btn btn-primary float-right">Submit</button>
           </div>
         </div>
+        {{!-- Competitors --}}
         <div id="competitor_row">
           <h3>Competitors:</h3>
             <ul id="competitor-list" class="list-group">
