--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -54,7 +54,7 @@
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>          
         {{!-- Map --}}
-        <div id="map">"TEST"</div>
+        <div id="map"></div>
   
         <div id="competitor_row">
           <h3>Competitors:</h3>
