--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
         <h2>Welcome Competitors!</h2>
-        <form class="clearfix mb-4" action="POST">
+        <form class="clearfix mb-4" action="POST" id="primary">
           <div class="form-group">
             <label for="example-text">First Name</label>
             <input type="text" id="first-name" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
