--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,15 +8,32 @@
       </div>
     </div>
   </nav> -->
-  <div id="logo">
-    <img src="assets/BB_Black_.png" alt="Bracket Builder Logo" id="mainLogo">
-  </div>
-
   <div class="container">
+    <div class="col-md-12" align="center">
+      <div id="logo">
+        <img src="assets/BB_Black_.png" alt="Bracket Builder Logo" id="mainLogo">
+      </div>
+    </div>
+  </div>
+  <div class="col-md-12" align="center"></div>
+  <div class="container">
+    <div class="col-md-6 col-md-offset-3"></div>
+      <div class="blurb">
+          <p>Tired of paying good money for tournaments, only to have your bracket empty, or with very few competitors?
+               <br>
+             Use Bracket Builder to help find other women in the same weight & belt bracket to coordinate attendance and get the most out of tournaments.
+                <br>
+               Nothing is more disappointing than training hard for months, and making weight, only to be stood up day of competition. 
+                <br>
+              Sign up now!</p>
+        </div>
+  </div>    
+<div class="col-md-6 col-md-offset-3"></div>
+  <div class="container" align="center">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-6 col-md-offset-6">
         <h2>Sign Up Form</h2>
-        <form class="signup">
+        <form class="signup" align="center">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
@@ -36,10 +53,10 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="container" align="center">
     <div class="row">
-      <div class="col-md-6">
-        <div class="container" id="BB info">
+      <div class="col-md-6" align="center">
+        <div class="container" id="BB info" align="center">
           <img src="../assets/bjjpan-women.jpg" alt="two women at a jiujitsu competition" id="signup-photo">
            </div>
       </div>
