--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,7 @@
           </div>
            <div class="form-group">
             <label for="example-text">Weight</label>
-        {{!-- <select class="custom-select">
+        <select class="custom-select">
             <option selected>Choose</option>
             <option value="lightfeather">Light Feather 53.5kg(118 lbs)</option>
             <option value="feather">Feather 58.5kg(129 lbs)</option>
@@ -42,8 +42,7 @@
             <option value="middle">Middle 69kg(152 lbs)</option>
             <option value="mediumheavy">Medium Heavy 74kg(163 lbs)</option>
             <option value="heavy">No maximum weight</option>
-        </select> --}}
-            <input type="text" id="weight" maxlength="3" class="form-control" aria-describedby="example-text" placeholder="Enter Weight">
+        </select>
           </div>
            <div class="form-group">
             <label for="example-text">Zipcode</label>
@@ -84,14 +83,6 @@
               {{/each}}
             </tbody>
           </table>
-            {{!-- <ul id="competitor-list" class="list-group">
-              {{#each competitor}}
-              <li data-id="{{this.id}}" class="list-group-item">
-                <a href="competitors/{{this.id}}">{{this.first_name}} {{this.last_name}} {{belt_color}} {{weight}} {{zipcode}}</a>
-                <button class="btn btn-danger float-right delete">ｘ</button>
-              </li>
-              {{/each}}
-            </ul> --}}
         </div>
         {{!-- Map --}}
         <div id="map"></div>
