--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,12 @@
 
 <div id="signup-body">
 <body>
-  <nav class="navbar navbar-default">
+  {{!-- <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
       </div>
     </div>
-  </nav>
+  </nav> --}}
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -25,6 +25,9 @@
         <br />
         <p>Or sign up <a href="/">here</a></p>
       </div>
+      <div class="col-md-6">
+        <img src="../assets/bjjpan-women.jpg" alt="two women at a jiujitsu competition" id="signup-photo">
+        </div>
     </div>
   </div>
 
