--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,14 +8,18 @@
       </div>
     </div>
   </nav> -->
+  <div class="row">
+    <div class="col-md-8 offset-5">
   <div id="logo">
-    <img src="assets/BB_Black_.png" alt="Bracket Builder Logo" id="mainLogo">
+    <img src="assets/BB_Black_.png" alt="Bracket Builder Logo" id="mainLogo2">
+  </div>
+  </div>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
+      <div class="col-md-8 col-md offset-2" id="signup-box">
+        <h2 id="signup">Sign Up Form</h2>
         <form class="signup">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -38,7 +42,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-8 offset-4">
         <div class="container" id="BB info">
           <img src="../assets/bjjpan-women.jpg" alt="two women at a jiujitsu competition" id="signup-photo">
            </div>
