--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,13 @@
 <div id="home">
   <div class="container">
     <div id="header">
-          <p class="headerText">Bracket</p>
-          <div id="logo">
-            <img src="assets/BB_Black_.png" alt="Bracket Builder Logo" id="mainLogo">
-          </div>
-          <p class="headerText">Builder</p>
+      <p class="headerText">Bracket</p>
+      <div id="logo">
+        <img src="assets/BB_Black_.png" alt="Bracket Builder Logo" id="mainLogo">
+      </div>
+      <p class="headerText">Builder</p>
 
-        </div>
+    </div>
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
@@ -15,39 +15,42 @@
         <form class="clearfix mb-4" action="POST" id="primary">
           <div class="form-group">
             <label for="example-text">First Name</label>
-            <input type="text" id="first-name" class="form-control" aria-describedby="example-text" placeholder="Enter First Name">
+            <input type="text" id="first-name" class="form-control" aria-describedby="example-text"
+              placeholder="Enter First Name">
           </div>
-           <div class="form-group">
+          <div class="form-group">
             <label for="example-text">Last Name</label>
-            <input type="text" id="last-name" class="form-control" aria-describedby="example-text" placeholder="Enter Last Name">
+            <input type="text" id="last-name" class="form-control" aria-describedby="example-text"
+              placeholder="Enter Last Name">
           </div>
-           <div class="form-group">
+          <div class="form-group">
             <label for="example-text">Belt Color</label>
             <select class="custom-select" id="belt-color">
-            <option selected> Choose Belt Color</option>
-            <option value="whitebelt">White</option>
-            <option value="bluebelt">Blue</option>
-            <option value="purplebelt">Purple</option>
-            <option value="brownbelt">Brown</option>
-            <option value="blackbelt">Black</option>
-        </select>
+              <option selected> Choose Belt Color</option>
+              <option value="whitebelt">White</option>
+              <option value="bluebelt">Blue</option>
+              <option value="purplebelt">Purple</option>
+              <option value="brownbelt">Brown</option>
+              <option value="blackbelt">Black</option>
+            </select>
           </div>
-           <div class="form-group">
+          <div class="form-group">
             <label for="example-text">Weight</label>
-        {{!-- <select class="custom-select">
-            <option selected>Choose</option>
-            <option value="lightfeather">Light Feather 53.5kg(118 lbs)</option>
-            <option value="feather">Feather 58.5kg(129 lbs)</option>
-            <option value="light">Light 64kg(141 lbs)</option>
-            <option value="middle">Middle 69kg(152 lbs)</option>
-            <option value="mediumheavy">Medium Heavy 74kg(163 lbs)</option>
-            <option value="heavy">No maximum weight</option>
-        </select> --}}
-            <input type="text" id="weight" maxlength="3" class="form-control" aria-describedby="example-text" placeholder="Enter Weight">
+            <select class="custom-select" id="weight">
+              <option selected>Choose</option>
+              <option value="lightfeather">Light Feather 53.5kg(118 lbs)</option>
+              <option value="feather">Feather 58.5kg(129 lbs)</option>
+              <option value="light">Light 64kg(141 lbs)</option>
+              <option value="middle">Middle 69kg(152 lbs)</option>
+              <option value="mediumheavy">Medium Heavy 74kg(163 lbs)</option>
+              <option value="heavy">No maximum weight</option>
+            </select>
+
           </div>
-           <div class="form-group">
+          <div class="form-group">
             <label for="example-text">Zipcode</label>
-            <input type="text" id="zipcode" maxlength="5" class="form-control" aria-describedby="example-text" placeholder="Enter Zipcode">
+            <input type="text" id="zipcode" maxlength="5" class="form-control" aria-describedby="example-text"
+              placeholder="Enter Zipcode">
           </div>
           <div class="form-group">
           </div>
@@ -66,7 +69,6 @@
                 <th scope="col">Belt Color</th>
                 <th scope="col">Weight</th>
                 <th scope="col">Zipcode</th>
-                <th scope="col">Distance</th>
                 <th scope="col">Delete</th>
               </tr>
             </thead>
@@ -84,20 +86,13 @@
               {{/each}}
             </tbody>
           </table>
-            {{!-- <ul id="competitor-list" class="list-group">
-              {{#each competitor}}
-              <li data-id="{{this.id}}" class="list-group-item">
-                <a href="competitors/{{this.id}}">{{this.first_name}} {{this.last_name}} {{belt_color}} {{weight}} {{zipcode}}</a>
-                <button class="btn btn-danger float-right delete">ｘ</button>
-              </li>
-              {{/each}}
-            </ul> --}}
         </div>
         {{!-- Map --}}
         <div id="map"></div>
         <div class="col-8 offset-2">
           <div class="form-group">
-            <input type="text" id="zip" class="form-control" aria-describedby="example-text" placeholder="Enter zipcode to find nearby gyms">
+            <input type="text" id="zip" class="form-control" aria-describedby="example-text"
+              placeholder="Enter zipcode to find nearby gyms">
             <button id="zipSubmit" class="btn btn-primary float-right">Submit</button>
           </div>
         </div>
