fix delete button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -60,7 +60,7 @@
         {{!-- Competitors --}}
 
         <div id="competitor_row">
-          <h3>Competitors:</h3>
+          <h3 id="competitorHeader">Competitors:</h3>
           <table class="table">
             <thead>
               <tr>
@@ -69,7 +69,7 @@
                 <th scope="col">Belt Color</th>
                 <th scope="col">Weight</th>
                 <th scope="col">Zipcode</th>
-                <th scope="col">Delete</th>
+                <th scope="col"></th>
               </tr>
             </thead>
             <tbody id="competitor-list">
